[package]
name = "home-intercom-server-rs"
version = "0.2.0"
authors = ["Kory <korygm33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures-util = "0.3.15"
webhook = "1.0.0"
actix-http = "2.2.0"
actix-web-httpauth = "0.5.1"
actix-web-prom = "0.5.1"
prometheus = "0.11.0"
